--- a/templates/default/style/dark.css
+++ b/templates/default/style/dark.css
@@ -432,6 +432,39 @@ input[type=number]::-webkit-outer-spin-button {
     color: #b7b7b8; /* Softer light color, same as --text-secondary */
 }
 
+/* Accordion styling for dark mode */
+.accordion-item {
+    background-color: var(--bg-dark-accent);
+    border-color: var(--border-dark);
+}
+
+.accordion-button {
+    background-color: var(--bg-dark-secondary);
+    color: var(--text-light);
+}
+
+.accordion-button:not(.collapsed) {
+    background-color: var(--bg-dark-hover);
+    color: var(--text-light);
+}
+
+.accordion-button:hover {
+    background-color: var(--bg-dark-hover);
+}
+
+/* Fix visibility of accordion toggle icon in dark mode */
+.accordion-button::after {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23f8f9fa'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+}
+
+.accordion-button:not(.collapsed)::after {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23f8f9fa'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+}
+
+.accordion .table {
+    --bs-table-striped-bg: var(--bg-dark-striped-odd);
+}
+
 /* Alert close button alignment */
 .alert .btn-close {
     position: absolute;
