--- a/templates/default/edit_zone_templ.html
+++ b/templates/default/edit_zone_templ.html
@@ -1,13 +1,7 @@
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="index.php">{% trans %}Home{% endtrans %}</a></li>
-        <li class="breadcrumb-item">
-        {% if is_reverse_zone %}
-        <a href="index.php?page=list_reverse_zones">{% trans %}Reverse Zones{% endtrans %}</a>
-        {% else %}
-        <a href="index.php?page=list_forward_zones">{% trans %}Forward Zones{% endtrans %}</a>
-        {% endif %}
-    </li>
+        <li class="breadcrumb-item">Zones</li>
         <li class="breadcrumb-item"><a href="index.php?page=list_zone_templ">{% trans %}Zone templates{% endtrans %}</a></li>
         <li class="breadcrumb-item">{{ templ_details['name'] }}</li>
         <li class="breadcrumb-item" aria-current="page">{% trans %}Edit template{% endtrans %}</li>
@@ -26,7 +20,7 @@
         <strong><i class="bi bi-file-earmark-text me-2"></i>{% trans %}Template Records{% endtrans %}: "{{templ_details['name']}}"</strong>
     </div>
     <div class="card-body p-0">
-        {% if records == "-1" %}
+        {% if records is empty %}
         <div class="p-4 text-center">
             <p class="text-secondary mb-4">{% trans %}This zone template does not have any records yet.{% endtrans %}</p>
             <a class="btn btn-primary btn-sm" href="index.php?page=add_zone_templ_record&id={{zone_templ_id}}">
@@ -79,8 +73,9 @@
                 </table>
             </div>
         </form>
+        {% endif %}
     </div>
-    {% if records != "-1" %}
+    {% if not records is empty %}
     <div class="card-footer py-3 d-flex justify-content-between">
         <div>
             <a class="btn btn-primary btn-sm" href="index.php?page=add_zone_templ_record&id={{zone_templ_id}}">
@@ -94,7 +89,6 @@
         </div>
     </div>
     {% endif %}
-    </div>
 </div>
 
 <!-- Placeholders Info Card -->
